# laboratorni

./: CMakeLists.txt  README.md  main.c
